# coreAutoScheduler

./: .gitignore  CMakeLists.txt  README.md
include/: CodeIR.h  Evaluation.h  Graph.h  Node.h  Transformation.h
include/autoSchedulerInfrastructure/: Action.h  Evaluation.h  Graph.h
src/: CMakeLists.txt  CodeIR.cpp  Node.cpp  Transformation.cpp
